# Nova-Cache

./: .dev_state.json  .gitignore  Cargo.toml  LICENSE  README.md  dev.bat  dev.ps1  panic.txt  stop
config/: nova_cache.toml
crates/nova-bench/: Cargo.toml
crates/nova-bench/src/: main.rs
crates/nova-cache-core/: Cargo.toml
crates/nova-cache-core/src/: arc.rs  block.rs  config.rs  l2_pool.rs  l2_priority.rs  lib.rs  persistence.rs  pool.rs  predictor.rs  ssd_tier.rs  stats.rs  tinylfu.rs
crates/nova-cache-driver-comm/: Cargo.toml
crates/nova-cache-driver-comm/src/: ioctl.rs  lib.rs  messages.rs  port.rs  shared_mem.rs
crates/nova-cache-gui/: Cargo.toml
crates/nova-cache-gui/src/: main.rs
crates/nova-cache-kdu/: Cargo.toml
crates/nova-cache-kdu/src/: dse.rs  hvci.rs  lib.rs  loader.rs  provider.rs  scm.rs
crates/nova-cache-monitor/: Cargo.toml
crates/nova-cache-monitor/src/: etw.rs  heatmap.rs  lib.rs  prefetch.rs
crates/nova-cache-service/: Cargo.toml
crates/nova-cache-service/src/: flush_thread.rs  ipc.rs  journal.rs  l2_writer.rs  main.rs  migration.rs  orchestrator.rs  perf_tracker.rs  prefetch.rs  service.rs
crates/nova-stress/: Cargo.toml
crates/nova-stress/src/: main.rs
driver/novacache/: Novacache.c  Novacache.h  Novacache.inf  Novacache.vcxproj  Novacache_1_800.c
memtest/: Cargo.toml
memtest/src/: main.rs
scripts/: elevated_run.ps1  start_console.ps1  start_service.ps1  test_cache.ps1
temp/: log.txt
