[package]
name = "nova-cache-monitor"
version = "0.92.0"
edition = "2021"
description = "System I/O monitoring — ETW tracing, access heatmaps, sequential prefetch detection"
license = "MIT"

[dependencies]
windows = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ferrisetw = "1"
nova-cache-core = { path = "../nova-cache-core" }
